--- a/Week 4/ReadIt/index.html
+++ b/Week 4/ReadIt/index.html
@@ -9,13 +9,13 @@
             <div id="app">
             <!-- Everything in here is managed by Vue -->
             <input type="text" placeholder="Book title" v-model="bookName">
-            <input type="number" placeholder="Author" v-model="bookAuthor">
-            <input type="number" placeholder="Rating" v-model="bookRating">
+            <input type="text" placeholder="Author" v-model="bookAuthor">
+            <input type="text" placeholder="Rating" v-model="bookRating">
             <button v-on:click="addBook">Add book</button>
             <div v-if="books.length>0">
                 <h2>{{heading}}</h2>
             <ol>
-                <li v-for="book,i in books" v-bind:style="{ backgroundColor: i % 2==0 ? '#EEEEEE' : 'CCCCCC' }">
+                <li v-for="(book,i) in books" v-bind:style="{ backgroundColor: i % 2==0 ? '#EEEEEE' : 'CCCCCC' }">
                     <div><strong>{{ book.title }} </strong></div>
                     <div>Calories: {{ book.author }} </div>
                     <div>Rating: {{ book.rating }} </div>
